# gsync

./: .gitignore  CMakeLists.txt  GSync_da.ts  GSync_es-ES.ts  GSync_ga-IE.ts  GSync_ge.ts  GSync_pt-PT.ts  GSync_ro.ts  GSync_ru.ts  GSync_sk.ts  GSync_sl.ts  GSync_sv-SE.ts  GSync_tlh-AA.ts  GSync_zh-CN.ts  GSync_zh-TW.ts  LICENSE  README.md  crowdin.yml  drive_sync.py  fileanalyzerunnable.cpp  fileanalyzerunnable.h  googleauthenticator.cpp  googleauthenticator.h  googledrive.cpp  googledrive.h  googlefile.cpp  googlefile.h  googlefiledownload.cpp  googlefiledownload.h  googlefilelist.cpp  googlefilelist.h  googlefilesync.cpp  googlefilesync.h  googlefilesyncmodel.cpp  googlefilesyncmodel.h  googlesync.cpp  googlesync.h  googlesyncdata.cpp  googlesyncdata.h  main.cpp  (+10 more)
da/: GSync_ro.ts  GSync_zh-TW.ts
de/: GSync_nl.ts  GSync_pt-PT.ts
el/: GSync_de.ts  GSync_tlh-AA.ts
en-PT/: GSync_ro.ts
es-ES/: GSync_sl.ts
fi/: GSync_da.ts  GSync_zh-TW.ts
fr/: GSync_en-PT.ts  GSync_fr.ts
ga-IE/: GSync_no.ts
hi/: GSync_pt-PT.ts  GSync_ru.ts
i18n/: CMakeLists.txt  GSync_af.ts  GSync_ar.ts  GSync_ca.ts  GSync_cs.ts  GSync_da.ts  GSync_de.ts  GSync_el.ts  GSync_en-PT.ts  GSync_en.ts  GSync_es.ts  GSync_fi.ts  GSync_fr.ts  GSync_he.ts  GSync_hi.ts  GSync_hu.ts  GSync_it.ts  GSync_ja.ts  GSync_ko.ts  GSync_lv.ts  GSync_nl.ts  GSync_no.ts  GSync_pl.ts  GSync_pt.ts  GSync_ro.ts  GSync_ru.ts  GSync_sr.ts  GSync_sv.ts  GSync_tr.ts  GSync_uk.ts  GSync_vi.ts  GSync_zh.ts
ja/: GSync_hi.ts  GSync_zh-TW.ts
lv/: GSync_de.ts  GSync_sv-SE.ts
nl/: GSync_ro.ts  GSync_sv-SE.ts
(+19 files in other folders)
